# unstructured_example

./: pyproject.toml  unstructured_data_pipeline.py
.dlt/: config.toml
